# samsara-mcp-server

./: .gitignore  CURSOR_CONTEXT.md  README.md  claude_desktop_config.json  main.py  pyproject.toml  samsara_client.py  server.py  spec.json  test_server.py
scripts/: add_endpoint.py  sample_spec.json
tests/: __init__.py  conftest.py  test_samsara_client.py  test_server.py
